--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,9 @@
       padding: 0;
     }
     .container{
+      width: 100%;
       margin: 0 auto;
+      margin-bottom: 300px;
     }
     .container img{
       width: 100%;
@@ -22,7 +24,11 @@
 
 <body>
   <div class="container">
+    <img src="./city-flag.png" alt="">
     <img src="./fylme8weather-flag.jpg" alt="">
+    <img src="./set.png" alt="">
+    <img src="./search-flag.png" alt="">
+    <img src="./search-2.jpg" alt="">
   </div>
 </body>
 
